fix: Fix time stamp overflow bug

--- a/web/front/src/components/common/PageTemplate/PageTemplate.module.scss
+++ b/web/front/src/components/common/PageTemplate/PageTemplate.module.scss
@@ -4,7 +4,7 @@
     height: 100vh;
 
     main {
-        min-height: calc(100vh - 100px);
+        height: calc(100vh - 100px);
         display: flex;
         justify-content: center;
     }
