--- a/web/front/src/components/result/TimeStampContainer.module.scss
+++ b/web/front/src/components/result/TimeStampContainer.module.scss
@@ -3,4 +3,6 @@
 .Container {
     width: 400px;
     background: #A7A7A7;
+
+    overflow: scroll;
 }
